# qdrant

./: Dockerfile  PRODUCTION_HARDENING_SUMMARY.md  README.md  conftest.py  docker-compose.yml  pyproject.toml
Desktop/qdrant/: .gitignore  Dockerfile  Makefile  README.md
Desktop/qdrant/docs/: article.md
Desktop/qdrant/src/molsearch/: api_server.py  config.py  embedder.py  molecule_processor.py  pipeline.py  qdrant_indexer.py
Desktop/qdrant/tests/: test_embedder.py  test_molecule_processor.py
docs/: article.md
src/molsearch/: __init__.py  api_server.py  config.py  data_loader.py  embedder.py  molecule_processor.py  pipeline.py  qdrant_indexer.py  streamlit_app.py
tests/: test_data_loader.py  test_embedder.py  test_molecule_processor.py  test_qdrant_indexer.py
