[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "molsearch"
version = "1.0.0"
description = "Molecular similarity search using ChemBERTa embeddings and Qdrant"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Divya Yadav"},
]
keywords = ["cheminformatics", "drug-discovery", "vector-search", "qdrant", "chemberta"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "rdkit>=2023.9.6",
    "transformers>=4.41.0",
    "torch>=2.2.0",
    "qdrant-client>=1.10.0,<2.0.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
]
ui = [
    "streamlit>=1.36.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]
all = [
    "molsearch[api,ui,dev]",
]

[project.scripts]
molsearch = "molsearch.pipeline:main"

[project.urls]
Repository = "https://github.com/dvy246/molecule-search-qdrant"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
